--- a/index.html
+++ b/index.html
@@ -13,49 +13,49 @@
       charset="utf-8"
     >
   </head>
-  <body>
+  <body class="app-body">
     <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="logo-image" src="./eisenhower-matrix.jpg">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
       <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
+        <label class="task-item__label new-task__heading" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task"class="task" type="task-item__input text">
+          <button class="task-item__button">Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
+      <ul class="tasks-block tasks-block_incompleted" id="incompleteTasks">
+        <li class="task-item">
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+          <label class="task-item__label">Pay Bills</label>
+          <input type="text" class="task-item__input task">
+          <button class="task-item__button edit">Edit</button>
+          <button class="task-item__button delete">
+            <img class="task-item__button-image_delete" src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
+        <li class="task-item task-item_edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+          <label class="task-item__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-item__input task">
+          <button class="task-item__button edit">Save</button>
+          <button class="task-item__button delete">
+            <img class="task-item__button-image_delete" src="./remove.svg">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
+      <ul class="tasks-block tasks-block_completed" id="completed-tasks">
+        <li class="task-item">
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+          <label class="task-item__label">See the Doctor</label>
+          <input type="text" class="task-item__input task">
+          <button class="task-item__button edit">Edit</button>
+          <button class="task-item__button delete">
+            <img class="task-item__button-image_delete" src="./remove.svg">
           </button>
         </li>
       </ul>
