--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     >
   </head>
   <body class="app-body">
-    <div class="aaa">
+    <div class="app-body__header">
       <img class="logo-image" src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="more_info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="app-body__functional-block">
+      <p id="add-task-block">
         <label class="task-item__label new-task__heading" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="task-item__input text">
@@ -27,7 +27,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul class="tasks-block tasks-block_incompleted" id="incompleteTasks">
+      <ul class="tasks-block tasks-block_incompleted" id="incomplete-tasks">
         <li class="task-item">
           <input type="checkbox">
           <label class="task-item__label">Pay Bills</label>
