refactor(basic-3.1): add single style for selectors naming

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="app-body">
     <div class="app-body__header">
       <img class="logo-image" src="./eisenhower-matrix.jpg">
-      <a class="more_info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="app-body__functional-block">
       <p id="add-task-block">
