fix(no relevant rule): change p tag to div for .add-task-block

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="app-body__functional-block">
-      <p id="add-task-block">
+      <div class="add-task-block">
         <label class="task-item__label new-task__heading" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="task-item__input text">
           <button class="task-item__button">Add</button>
         </div>
-      </p>
+      </div>
       <h3>Todo</h3>
       <ul class="tasks-block tasks-block_incompleted" id="incomplete-tasks">
         <li class="task-item">
