--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="add-task-block">
         <label class="task-item__label new-task__heading" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="task-item__input text">
+          <input id="new-task"class="task-item__input task" type="task-item__input text">
           <button class="task-item__button">Add</button>
         </div>
       </div>
@@ -30,7 +30,7 @@
       <ul class="tasks-block tasks-block_incompleted" id="incomplete-tasks">
         <li class="task-item">
           <input type="checkbox">
-          <label class="task-item__label">Pay Bills</label>
+          <label class="task-item__label task">Pay Bills</label>
           <input type="text" class="task-item__input task">
           <button class="task-item__button edit">Edit</button>
           <button class="task-item__button delete">
@@ -39,7 +39,7 @@
         </li>
         <li class="task-item task-item_edit-mode">
           <input type="checkbox">
-          <label class="task-item__label">Go Shopping</label>
+          <label class="task-item__label task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task-item__input task">
           <button class="task-item__button edit">Save</button>
           <button class="task-item__button delete">
@@ -51,7 +51,7 @@
       <ul class="tasks-block tasks-block_completed" id="completed-tasks">
         <li class="task-item">
           <input type="checkbox" checked>
-          <label class="task-item__label">See the Doctor</label>
+          <label class="task-item__label task">See the Doctor</label>
           <input type="text" class="task-item__input task">
           <button class="task-item__button edit">Edit</button>
           <button class="task-item__button delete">
