--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img class="logo-image" src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="app-body__functional-block">
+    <div class="app-body__func-block">
       <div class="add-task-block">
         <label class="task-item__label new-task__heading" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
