fix(advanced-1.2): add media alternatives for images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="app-body">
     <div class="app-body__header">
-      <img class="logo-image" src="./eisenhower-matrix.jpg">
+      <img class="logo-image" src="./eisenhower-matrix.jpg" alt="app logo image">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="app-body__func-block">
@@ -34,7 +34,7 @@
           <input type="text" class="task-item__input task">
           <button class="task-item__button edit">Edit</button>
           <button class="task-item__button delete">
-            <img class="task-item__button-image_delete" src="./remove.svg">
+            <img class="task-item__button-image_delete" src="./remove.svg" alt="remove button image">
           </button>
         </li>
         <li class="task-item task-item_edit-mode">
@@ -43,7 +43,7 @@
           <input type="text" value="Go Shopping" class="task-item__input task">
           <button class="task-item__button edit">Save</button>
           <button class="task-item__button delete">
-            <img class="task-item__button-image_delete" src="./remove.svg">
+            <img class="task-item__button-image_delete" src="./remove.svg" alt="remove button image">
           </button>
         </li>
       </ul>
@@ -55,7 +55,7 @@
           <input type="text" class="task-item__input task">
           <button class="task-item__button edit">Edit</button>
           <button class="task-item__button delete">
-            <img class="task-item__button-image_delete" src="./remove.svg">
+            <img class="task-item__button-image_delete" src="./remove.svg" alt="remove button image">
           </button>
         </li>
       </ul>
