--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="add-task-block">
         <label class="task-item__label new-task__heading" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task-item__input task" type="task-item__input text">
+          <input id="new-task" class="task-item__input task" type="text">
           <button class="task-item__button">Add</button>
         </div>
       </div>
