--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Todo App</title>
     <link
@@ -10,7 +10,6 @@
     <link rel="stylesheet"
       href="style.css"
       media="screen"
-      charset="utf-8"
     >
   </head>
   <body class="app-body">
