refactor(advanced-1.1): replace some tegs by semantics

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     >
   </head>
   <body class="app-body">
-    <div class="app-body__header">
+    <section class="app-body__header">
       <img class="logo-image" src="./eisenhower-matrix.jpg" alt="app logo image">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="app-body__func-block">
+    </section>
+    <section class="app-body__func-block">
       <div class="add-task-block">
         <label class="task-item__label new-task__heading" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -58,7 +58,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
